<resources>
    <string name="app_name">CODE_P25</string>
    <string name="stats">STATISTIQUES</string>
    <string name="leave">QUITTER</string>
    <string name="runnerCreation">CREER COUREUR</string>
    <string name="raceCreation">CREER COURSE</string>
    <string name="codep25">CODEP25</string>
    <string name="newRunner">NOUVEAU COUREUR</string>
    <string name="firstName">PRENOM</string>
    <string name="lastName">NOM</string>
    <string name="validate">VALIDER</string>
    <string name="level">NIVEAU</string>
    <string name="newRace">NOUVELLE COURSE</string>
    <string name="runnersList">LISTE COUREURS</string>
    <string name="participants">PARTICIPANTS</string>
    <string name="runners">COUREURS</string>
    <string name="teamsList">LISTE DES EQUIPES</string>
    <string name="consulter">CONSULTER</string>
    <string name="startRace">DEBUTER COURSE</string>
    <string name="teams">EQUIPES</string>
    <string name="runner_2">COUREUR 2</string>
    <string name="runner_1">COUREUR 1</string>
    <string name="runner_3">COUREUR 3</string>
    <string name="validate_team">VALIDER EQUIPE</string>
    <string name="courseName">NOM COURSE</string>
    <string name="counter">00:00:00</string>
    <string name="firstTeam">EQUIPE 1</string>
    <string name="firstSprint">SPRINT 1</string>
    <string name="secondTeam">EQUIPE 2</string>
    <string name="thirdTeam">EQUIPE 3</string>
    <string name="fourthTeam">EQUIPE 4</string>
    <string name="fifthTeam">EQUIPE 5</string>
    <string name="sixthTeam">EQUIPE 6</string>
    <string name="seventhTeam">EQUIPE 7</string>
    <string name="eightTeam">EQUIPE 8</string>
    <string name="ninthTeam">EQUIPE 9</string>
    <string name="tenthTeam">EQUIPE 10</string>
    <string name="eleventhTeam">EQUIPE 11</string>
    <string name="twelthTeam">EQUIPE 12</string>
    <string name="course_Stats">STATISTIQUES DE LA COURSE</string>
    <string name="course_Ranking">CLASSEMENT DE LA COURSE</string>
    <string name="firstObstacle">OBSTACLE 1</string>
    <string name="pitStop">PIT STOP</string>
    <string name="secondSprint">SPRINT 2</string>
    <string name="secondObstacle">OBSTACLE 2</string>
    <string name="goBack">RETOUR</string>
    <string name="chronoTime">CHRONO</string>
    <string name="stepTime">TEMPS ETAPE</string>
    <string name="team">EQUIPE</string>
    <string name="runner">COUREUR</string>
    <string name="course_Stats_records">MEILLEURS TEMPS PAR EPREUVE</string>
    <string name="detailedStats">STATISTIQUES DETAILLES</string>
    <string name="history">HISTORIQUE DES COURSES</string>
</resources>