<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70ad46"
    tools:context=".MainActivity">

    <LinearLayout
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:paddingTop="95dp"
            android:paddingStart="330dp"
            android:paddingEnd="330dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/codep25"
                style="@style/textView"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:gravity="center"/>

            <ImageView
                android:src="@drawable/running_man_grey"
                android:layout_height="75dp"
                android:layout_width="150dp"
                android:layout_marginEnd="20dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:paddingTop="95dp"
            android:paddingStart="330dp"
            android:paddingEnd="330dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/raceCreation"
                style="@style/mainActivityButton"
                android:text="@string/raceCreation"
                android:onClick="onRaceCreationClick"/>

            <Button
                android:id="@+id/runnerCreation"
                style="@style/mainActivityButton"
                android:text="@string/runnerCreation"
                android:onClick="onRunnerCreationClick"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="33"
            android:paddingTop="95dp"
            android:paddingStart="330dp"
            android:paddingEnd="330dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/statistics"
                style="@style/mainActivityButton"
                android:text="@string/stats"
                android:onClick="onStatsButtonClick"/>

            <Button
                android:id="@+id/leave"
                style="@style/mainActivityButton"
                android:text="@string/leave"
                android:onClick="closeApp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>