<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RaceCreationActivity"
    android:background="#70ad46">

    <LinearLayout
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingTop="95dp"
            android:paddingStart="330dp"
            android:paddingEnd="330dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/codep25"
                android:layout_height="75dp"
                android:layout_width="150dp"
                android:layout_marginEnd="20dp"
                android:textSize="20sp"
                android:gravity="center"/>

            <EditText
                android:id="@+id/courseName"
                android:layout_width="175dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:text="@string/newRace" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingTop="95dp"
            android:paddingStart="250dp"
            android:paddingEnd="250dp"
            android:orientation="horizontal" >

            <TextView
                android:text="@string/runnersList"
                style="@style/textView"
                android:layout_marginEnd="160dp"
                android:gravity="center"/>

            <TextView
                android:text="@string/participants"
                style="@style/textView"
                android:layout_marginEnd="20dp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="40"
            android:paddingTop="70dp"
            android:paddingStart="250dp"
            android:paddingEnd="250dp"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/runners"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:layout_marginEnd="20dp"
                android:text = "@string/runners"/>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:weightSum="100"
                android:orientation="vertical">

                <ImageView
                    android:src="@drawable/plus_button"
                    android:layout_height="25dp"
                    android:layout_width="150dp"
                    android:layout_marginBottom="10dp"
                    android:onClick="onPlusClick"/>

                <ImageView
                    android:src="@drawable/minus_button"
                    android:layout_height="30dp"
                    android:layout_width="150dp"
                    android:layout_marginEnd="20dp"
                    android:onClick="onMinusClick"/>

            </LinearLayout>

            <Spinner
                android:id="@+id/participants"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text = "@string/participants"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingStart="420dp"
            android:paddingEnd="330dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/leave"
                android:layout_height="75dp"
                android:layout_width="150dp"
                style="@style/mainActivityButton"
                android:text="@string/validate"
                android:onClick="validateRace"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>