<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70ad46"
    tools:context=".TeamActivity">

    <LinearLayout
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingStart="330dp"
            android:paddingEnd="330dp"
            android:orientation="horizontal">

            <TextView
                android:text="@string/codep25"
                style="@style/textView"
                android:layout_marginEnd="20dp"
                android:gravity="center"/>

            <TextView
                style="@style/textView"
                android:layout_marginEnd="20dp"
                android:text="@string/teamsList" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingTop="70dp"
            android:paddingStart="420dp"
            android:paddingEnd="420dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/firstPlayer"
                android:layout_height="50dp"
                android:layout_width="150dp"
                style="@style/mainActivityButton"
                android:text="@string/runner_1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingTop="70dp"
            android:paddingStart="330dp"
            android:paddingEnd="330dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:src="@drawable/up_arrow"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:paddingBottom="10dp"
                    android:maxWidth="20dp"
                    android:maxHeight="20dp"
                    android:onClick="upArrowClick"/>
                <ImageView
                    android:src="@drawable/down_arrow"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:onClick="downArrowClick"/>
            </LinearLayout>

            <Button
                android:id="@+id/secondPlayer"
                android:layout_height="50dp"
                android:layout_width="150dp"
                style="@style/mainActivityButton"
                android:text="@string/runner_2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingTop="70dp"
            android:paddingStart="420dp"
            android:paddingEnd="420dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/thirdPlayer"
                android:layout_height="50dp"
                android:layout_width="150dp"
                style="@style/mainActivityButton"
                android:text="@string/runner_3" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:paddingTop="50dp"
            android:paddingStart="420dp"
            android:paddingEnd="420dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/leave"
                android:layout_height="75dp"
                android:layout_width="150dp"
                style="@style/mainActivityButton"
                android:text="@string/validate_team"
                android:onClick="validateTeam"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>